# litecode

./: .flake8  .gitignore  README.md  pyproject.toml
litecode/: __main__.py  database.py  models.py  run_checks.py
src/: main.py  main_todo.py  run_checks.py
src/todo/: __init__.py  actions.py  controllers.py  database.py  main.py  models.py  view.py
tests/: __init__.py  test_main.py
